[gd_scene load_steps=5 format=3 uid="uid://c8kwprvu7wt1x"]

[ext_resource type="Script" path="res://Scripts/interactables.gd" id="1_j4xnq"]
[ext_resource type="Texture2D" uid="uid://k8saju7n2npd" path="res://icon.svg" id="2_d8p4h"]
[ext_resource type="Texture2D" uid="uid://8g4sjfgtkmx7" path="res://Textures/interact_icon.png" id="3_t0uf7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_oh1vp"]
radius = 66.2722

[node name="Area2D" type="Area2D"]
position = Vector2(657, 260)
collision_layer = 4
collision_mask = 2
script = ExtResource("1_j4xnq")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_d8p4h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_oh1vp")

[node name="Interact_Icon" type="Sprite2D" parent="."]
position = Vector2(3.00002, -73)
scale = Vector2(0.0986329, 0.0986329)
texture = ExtResource("3_t0uf7")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
